Sanitize unsafe characters in file names and improve security in certificate revocation, XML parsing, and user group filtering logic.